force-app/main/default/objects/Funding_Agreement__c/Funding_Agreement__c.object-meta.xml
<CustomObject>
    <label>Funding Agreement</label>
    <nameField>
        <displayFormat>FA-{0000000000}</displayFormat>
        <label>Funding Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>