force-app/main/default/objects/Funding_Agreement__c/fields/Alpha_Code2__c.field-meta.xml
<CustomField>
    <fullName>Alpha_Code2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alpha Code</label>
    <referenceTo>Alpha_Code__c</referenceTo>
    <relationshipLabel>Work Authorizations</relationshipLabel>
    <relationshipName>Work_Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>