force-app/main/default/objects/Funding_Agreement__c/fields/Alpha_Code__c.field-meta.xml
<CustomField>
    <fullName>Alpha_Code__c</fullName>
    <label>Alpha Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>39DN</fullName>
            </value>
            <value>
                <fullName>39DP</fullName>
            </value>
            <value>
                <fullName>39EY</fullName>
            </value>
            <value>
                <fullName>39TD</fullName>
            </value>
            <value>
                <fullName>39TE</fullName>
            </value>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>AB</fullName>
            </value>
            <value>
                <fullName>AF</fullName>
            </value>
            <value>
                <fullName>AF58</fullName>
            </value>
            <value>
                <fullName>AJ</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>BD</fullName>
            </value>
            <value>
                <fullName>BM</fullName>
            </value>
            <value>
                <fullName>BT</fullName>
            </value>
            <value>
                <fullName>CE</fullName>
            </value>
            <value>
                <fullName>CJ</fullName>
            </value>
            <value>
                <fullName>CP</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>DN</fullName>
            </value>
            <value>
                <fullName>DP</fullName>
            </value>
            <value>
                <fullName>EB</fullName>
            </value>
            <value>
                <fullName>ED</fullName>
            </value>
            <value>
                <fullName>EL</fullName>
            </value>
            <value>
                <fullName>EP</fullName>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>EW</fullName>
            </value>
            <value>
                <fullName>EY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>