force-app/main/default/objects/Funding_Agreement__c/fields/Approval_in_Process__c.field-meta.xml
<CustomField>
    <fullName>Approval_in_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval in Process</label>
    <type>Checkbox</type>
</CustomField>