force-app/main/default/objects/Funding_Agreement__c/fields/Approval_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Approval_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Rejected</label>
    <type>Checkbox</type>
</CustomField>