force-app/main/default/objects/Funding_Agreement__c/fields/Assistant_Secretary__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Secretary__c</fullName>
    <label>Assistant Secretary</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>CR</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>EE</fullName>
            </value>
            <value>
                <fullName>EI</fullName>
            </value>
            <value>
                <fullName>EM</fullName>
            </value>
            <value>
                <fullName>FE</fullName>
            </value>
            <value>
                <fullName>IA</fullName>
            </value>
            <value>
                <fullName>IM</fullName>
            </value>
            <value>
                <fullName>LM</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>NE</fullName>
            </value>
            <value>
                <fullName>OE</fullName>
            </value>
            <value>
                <fullName>OP</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>TT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>