force-app/main/default/objects/Funding_Agreement__c/fields/B_R_Entries_Funding_Received__c.field-meta.xml
<CustomField>
    <fullName>B_R_Entries_Funding_Received__c</fullName>
    <label>B&amp;R Entries Funding Received</label>
    <summarizedField>Budget_Reporting_Entry__c.Funds_Recieved__c</summarizedField>
    <summaryForeignKey>Budget_Reporting_Entry__c.Funding_Agreement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>