force-app/main/default/objects/Funding_Agreement__c/fields/CanSubmitForApproval__c.field-meta.xml
<CustomField>
    <fullName>CanSubmitForApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CanSubmitForApproval</label>
    <type>Checkbox</type>
</CustomField>