force-app/main/default/objects/Funding_Agreement__c/fields/Control_Point__c.field-meta.xml
<CustomField>
    <fullName>Control_Point__c</fullName>
    <label>Control Point</label>
    <length>12</length>
    <type>Text</type>
</CustomField>