force-app/main/default/objects/Funding_Agreement__c/fields/CPS_Number__c.field-meta.xml
<CustomField>
    <fullName>CPS_Number__c</fullName>
    <label>CPS Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>