force-app/main/default/objects/Funding_Agreement__c/fields/CRADA__c.field-meta.xml
<CustomField>
    <fullName>CRADA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRADA</label>
    <type>Checkbox</type>
</CustomField>