force-app/main/default/objects/Funding_Agreement__c/fields/CRADALU__c.field-meta.xml
<CustomField>
    <fullName>CRADALU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRADA #</label>
    <referenceTo>CRADA__c</referenceTo>
    <relationshipLabel>Funding Agreements</relationshipLabel>
    <relationshipName>Funding_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>