force-app/main/default/objects/Funding_Agreement__c/fields/EPR_Current__c.field-meta.xml
<CustomField>
    <fullName>EPR_Current__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EPR Current</label>
    <type>Checkbox</type>
</CustomField>