force-app/main/default/objects/Funding_Agreement__c/fields/FA_Number__c.field-meta.xml
<CustomField>
    <fullName>FA_Number__c</fullName>
    <label>FA Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>