force-app/main/default/objects/Funding_Agreement__c/fields/Final_Approval_Received__c.field-meta.xml
<CustomField>
    <fullName>Final_Approval_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Approval Received</label>
    <type>Checkbox</type>
</CustomField>