force-app/main/default/objects/Funding_Agreement__c/fields/Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Funding_Amount__c</fullName>
    <label>Funding Amount</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>