force-app/main/default/objects/Funding_Agreement__c/fields/Funding_Received__c.field-meta.xml
<CustomField>
    <fullName>Funding_Received__c</fullName>
    <label>Funding Received</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>