force-app/main/default/objects/Funding_Agreement__c/fields/HQ_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>HQ_Sign_Date__c</fullName>
    <label>HQ Sign Date</label>
    <type>Date</type>
</CustomField>