force-app/main/default/objects/Funding_Agreement__c/fields/Incremental_Funding__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Funding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incremental Funding</label>
    <type>Checkbox</type>
</CustomField>