force-app/main/default/objects/Funding_Agreement__c/fields/PNNL_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Sign_Date__c</fullName>
    <label>PNNL Sign Date</label>
    <type>Date</type>
</CustomField>