force-app/main/default/objects/Funding_Agreement__c/fields/PNSO_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>PNSO_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PNSO Coordinator</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$User.PNSO_Coordinator__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Authorizations2</relationshipName>
    <type>Lookup</type>
</CustomField>