force-app/main/default/objects/Funding_Agreement__c/fields/PNSO_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>PNSO_Sign_Date__c</fullName>
    <label>PNSO Sign Date</label>
    <type>Date</type>
</CustomField>