force-app/main/default/objects/Funding_Agreement__c/fields/Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Number__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project Number</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>Funding_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>