force-app/main/default/objects/Funding_Agreement__c/fields/Project_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Project_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Specialist</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Funding_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>