force-app/main/default/objects/Funding_Agreement__c/fields/Proposal_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this an amendment to the proposal?</inlineHelpText>
    <label>Proposal Amendment?</label>
    <type>Checkbox</type>
</CustomField>