force-app/main/default/objects/Funding_Agreement__c/fields/Proposed_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Amendment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposed Amendment</label>
    <referenceTo>Proposed_Amendment__c</referenceTo>
    <relationshipLabel>Funding Agreements</relationshipLabel>
    <relationshipName>Funding_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>