force-app/main/default/objects/Funding_Agreement__c/fields/Revised_Amount__c.field-meta.xml
<CustomField>
    <fullName>Revised_Amount__c</fullName>
    <formula>Previous_Amount__c + Change_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revised Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>