force-app/main/default/objects/Funding_Agreement__c/fields/Scope_Changed__c.field-meta.xml
<CustomField>
    <fullName>Scope_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scope Changed</label>
    <type>Checkbox</type>
</CustomField>