force-app/main/default/objects/Funding_Agreement__c/fields/Scope_Number__c.field-meta.xml
<CustomField>
    <fullName>Scope_Number__c</fullName>
    <formula>Project_Number__r.Scope_Num__c</formula>
    <label>Scope Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>