force-app/main/default/objects/Funding_Agreement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Budget Office Update</fullName>
            </value>
            <value>
                <fullName>Budget Office Review</fullName>
            </value>
            <value>
                <fullName>Pending HQ Correction</fullName>
            </value>
            <value>
                <fullName>Pending Obs Action</fullName>
            </value>
            <value>
                <fullName>Void/Withdrawn</fullName>
            </value>
            <value>
                <fullName>Completed - Funds Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>