force-app/main/default/objects/Funding_Agreement__c/fields/Total_WAS_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_WAS_Amount_Received__c</fullName>
    <formula>Revised_Amount__c - B_R_Entries_Funding_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total WAS Amount Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>