force-app/main/default/objects/Funding_Agreement__c/fields/WA_Ready_for_Review__c.field-meta.xml
<CustomField>
    <fullName>WA_Ready_for_Review__c</fullName>
    <formula>AND(
ISPICKVAL(Status__c, &quot;Work Authorization Review&quot;),
NOT(ISBLANK(PNSO_Technical_Reviewer__c)),
NOT(ISBLANK(PNSO_Contracting_Officer__c)),
 CanSubmitForApproval__c = True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WA Ready for Review</label>
    <type>Checkbox</type>
</CustomField>