force-app/main/default/objects/Funding_Agreement__c/fields/WAS_Number__c.field-meta.xml
<CustomField>
    <fullName>WAS_Number__c</fullName>
    <label>WAS Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>