force-app/main/default/objects/Funding_Agreement__c/validationRules/ValidateSubmit.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateSubmit</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c,&apos;Work Authorization Review&apos;) &amp;&amp; 
CanSubmitForApproval__c  = False</errorConditionFormula>
    <errorMessage>All conditions for approval have not been met. Verify that the record has incoming email and work authorization attachments.</errorMessage>
</ValidationRule>