force-app/main/default/objects/Funding_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Revision_Number__c</columns>
    <columns>AFP_Month__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Status__c</columns>
    <columns>Assistant_Secretary__c</columns>
    <columns>Control_Point__c</columns>
    <columns>Change_Amount__c</columns>
    <columns>PNSO_Sign_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Work Authorizations</label>
</ListView>