force-app/main/default/objects/Funding_Agreement__c/listViews/All_Proposals_Awaiting_Approval.listView-meta.xml
<ListView>
    <fullName>All_Proposals_Awaiting_Approval</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Proposals Awaiting Approval</label>
</ListView>