force-app/main/default/objects/Funding_Agreement__c/listViews/Business_Office_Queue_Funding_Agreement1.listView-meta.xml
<ListView>
    <fullName>Business_Office_Queue_Funding_Agreement1</fullName>
    <filterScope>Queue</filterScope>
    <label>Business Office Queue</label>
    <queue>Business_Office_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>