force-app/main/default/objects/Funding_Agreement__c/listViews/My_Proposals_Awaiting_Approval.listView-meta.xml
<ListView>
    <fullName>My_Proposals_Awaiting_Approval</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>My Proposals Awaiting Approval</label>
</ListView>