force-app/main/default/objects/Funding_Agreement__c/listViews/WAS_Specialist_Queue_Funding_Agreement.listView-meta.xml
<ListView>
    <fullName>WAS_Specialist_Queue_Funding_Agreement</fullName>
    <filterScope>Queue</filterScope>
    <label>WAS Specialist Queue</label>
    <queue>WAS_Specialist_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>